c4prj1_deck/grade.txt
Grading at Wed Jul 31 10:54:52 UTC 2019
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:211:12: error: unused variable ‘count’ [-Werror=unused-variable]
   unsigned count = 1;
            ^
cc1: all warnings being treated as errors
Compilation of eval.c failed

Overall Grade: F
